Closed Bug 764851 Opened 14 years ago Closed 14 years ago

Animating the width/height of an outer SVG element doesn't work

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla16
Tracking Status
firefox13 --- affected
firefox14 --- verified
firefox15 --- verified

People

(Reporter: longsonr, Assigned: longsonr)

References

()

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

No description provided.
Worked in Firefox 8 doesn't work from 12 onwards. Another example is: http://hoffmann.bplaced.net/svgtest/widthheight02.svg
OS: Windows 7 → All
Hardware: x86_64 → All
Keywords: regression
Attached patch patch (obsolete) — Splinter Review
Assignee: nobody → longsonr
Attachment #633551 - Flags: review?(jwatt)
Comment on attachment 633551 [details] [diff] [review] patch Please add a comment along the lines of the following at the start of nsSVGElement::GetAnimatedAttr: // We check mapped-into-style attributes first so that animations // targeting width/height on outer-<svg> don't appear to be ignored // because we returned a nsISMILAttr for the corresponding // SVGAnimatedLength.
Attachment #633551 - Flags: review?(jwatt) → review+
Attachment #633551 - Attachment is obsolete: true
Flags: in-testsuite+
Target Milestone: --- → mozilla16
Blocks: 688430
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Comment on attachment 633795 [details] [diff] [review] updated with comments and extra tweak to pass try [Approval Request Comment] Bug caused by (feature/regressing bug #): bug 668163 User impact if declined: width/height animations on outer svg won't work. Testing completed (on m-c, etc.): passed tests on m-c, new tests added Risk to taking this patch (and alternatives if risky): very low String or UUID changes made by this patch: none
Attachment #633795 - Flags: approval-mozilla-beta?
Attachment #633795 - Flags: approval-mozilla-aurora?
Comment on attachment 633795 [details] [diff] [review] updated with comments and extra tweak to pass try [Triage Comment] Fairly recent, low risk SVG regression. Approving for Aurora/Beta.
Attachment #633795 - Flags: approval-mozilla-beta?
Attachment #633795 - Flags: approval-mozilla-beta+
Attachment #633795 - Flags: approval-mozilla-aurora?
Attachment #633795 - Flags: approval-mozilla-aurora+
Verified fixed on FF 14b9 on Win 7, Ubuntu 12.04 and Mac OS X 10.6.
Verified fixed on FF 15b3 on Win 7, Ubuntu 12.04 and Mac OS X 10.6.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: