Bug 764851 - Fix animations of the width/height of an outer SVG element. r=jwatt a=akeybl